fix spacing about page

--- a/src/scss/templates/_about.scss
+++ b/src/scss/templates/_about.scss
@@ -27,6 +27,7 @@
 
 .icon-block {
   position: relative;
+  margin-bottom: calc-em(60px);
 }
 
 .icon-block img {
